Fix wrap problem of higlighted word on Step

--- a/src/components/Step/Step.module.css
+++ b/src/components/Step/Step.module.css
@@ -52,6 +52,7 @@
   border-radius: 6px;
   padding: 2px 6px;
   font-size: 12px;
+  white-space: nowrap;
 }
 
 @media only screen and (max-width: 600px) {
